Fix horizontal scroll

--- a/paradify.net/web/src/web/cssChrome/bootstrapCustom.css
+++ b/paradify.net/web/src/web/cssChrome/bootstrapCustom.css
@@ -7,7 +7,7 @@
 }
 
 .jumbotron {
-    padding: 2% 2%;
+    /*padding: 2% 2%;*/
     background-color: white !important;
 }
 
